--- a/package.json
+++ b/package.json
@@ -21,10 +21,19 @@
     },
     "homepage": "https://github.com/davidkpiano/node-azure-mvc#readme",
     "dependencies": {
-        "express": "^4.16.3"
+        "@types/express-handlebars": "0.0.30",
+        "express": "^4.16.3",
+        "express-react-views": "^0.10.5",
+        "hbs": "^4.0.1",
+        "pug": "^2.0.3",
+        "react": "^16.4.2",
+        "react-dom": "^16.4.2"
     },
     "devDependencies": {
         "@types/express": "^4.16.0",
+        "@types/hbs": "^4.0.0",
+        "@types/pug": "^2.0.4",
+        "@types/react": "^16.4.8",
         "typescript": "^3.0.1"
     }
 }
