--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
+        "jsx": "preserve",
         "paths": {
             "*": [
                 "node_modules/*",
