--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express": "^4.16.3",
         "express-react-views": "^0.10.5",
         "hbs": "^4.0.1",
+        "mongoose": "^5.2.7",
         "pug": "^2.0.3",
         "react": "^16.4.2",
         "react-dom": "^16.4.2"
@@ -32,6 +33,7 @@
     "devDependencies": {
         "@types/express": "^4.16.0",
         "@types/hbs": "^4.0.0",
+        "@types/mongoose": "^5.2.4",
         "@types/pug": "^2.0.4",
         "@types/react": "^16.4.8",
         "typescript": "^3.0.1"
