--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "homepage": "https://github.com/davidkpiano/node-azure-mvc#readme",
     "dependencies": {
         "@types/express-handlebars": "0.0.30",
+        "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "express-react-views": "^0.10.5",
         "hbs": "^4.0.1",
@@ -31,6 +32,7 @@
         "react-dom": "^16.4.2"
     },
     "devDependencies": {
+        "@types/dotenv": "^4.0.3",
         "@types/express": "^4.16.0",
         "@types/hbs": "^4.0.0",
         "@types/mongoose": "^5.2.4",
