--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
         "pug": "^2.0.3",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
-        "typescript": "^3.0.1"
-    },
-    "devDependencies": {
+        "typescript": "^3.0.1",
         "@types/dotenv": "^4.0.3",
         "@types/express": "^4.16.0",
         "@types/hbs": "^4.0.0",
