--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     },
     "homepage": "https://github.com/davidkpiano/node-azure-mvc#readme",
     "dependencies": {
+        "@types/dotenv": "^4.0.3",
+        "@types/express": "^4.16.0",
         "@types/express-handlebars": "0.0.30",
+        "@types/hbs": "^4.0.0",
+        "@types/mongoose": "^5.2.6",
+        "@types/pug": "^2.0.4",
+        "@types/react": "^16.4.11",
         "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "express-react-views": "^0.10.5",
         "hbs": "^4.0.1",
-        "mongoose": "^5.2.7",
+        "mongoose": "^5.2.9",
         "pug": "^2.0.3",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
-        "typescript": "^3.0.1",
-        "@types/dotenv": "^4.0.3",
-        "@types/express": "^4.16.0",
-        "@types/hbs": "^4.0.0",
-        "@types/mongoose": "^5.2.4",
-        "@types/pug": "^2.0.4",
-        "@types/react": "^16.4.8"
+        "typescript": "^3.0.1"
     }
 }
