--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "npm run build-ts && npm run serve",
         "postinstall": "npm start",
-        "serve": "node server.js",
+        "serve": "node dist/index.js",
         "build-ts": "tsc",
         "watch-ts": "tsc --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
