--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "npm run build-ts && npm run serve",
         "serve": "node dist/index.js",
-        "build-ts": "tsc",
+        "build-ts": "./node_modules/.bin/tsc",
         "watch-ts": "tsc --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
