Setting up pm2 and concurrently

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "npm run build-ts && npm run serve",
         "serve": "node dist/index.js",
-        "watch": "pm2 run index.ts",
+        "watch": "concurrently \"npm:watch-ts\" \"npm:serve-dev\"",
+        "serve-dev": "./node_modules/.bin/pm2 start ./dist/index.js --watch",
         "build-ts": "./node_modules/.bin/tsc",
         "watch-ts": "./node_modules/.bin/tsc --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -40,6 +41,7 @@
         "typescript": "^3.0.1"
     },
     "devDependencies": {
+        "concurrently": "^3.6.1",
         "pm2": "^3.0.4"
     }
 }
