--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "npm run build-ts && npm run serve",
         "serve": "node dist/index.js",
         "watch": "npm run watch-ts & ./node_modules/.bin/nodemon dist/index.js",
-        "serve-dev": "./node_modules/.bin/pm2 start ./dist/index.js --watch",
+        "serve-dev": "./node_modules/.bin/nodemon dist/index.js",
         "build-ts": "./node_modules/.bin/tsc",
         "watch-ts": "./node_modules/.bin/tsc --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +23,7 @@
     },
     "homepage": "https://github.com/davidkpiano/node-azure-mvc#readme",
     "dependencies": {
+        "@types/cors": "^2.8.4",
         "@types/dotenv": "^4.0.3",
         "@types/express": "^4.16.0",
         "@types/express-handlebars": "0.0.30",
@@ -30,6 +31,7 @@
         "@types/mongoose": "^5.2.6",
         "@types/pug": "^2.0.4",
         "@types/react": "^16.4.11",
+        "cors": "^2.8.4",
         "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "express-react-views": "^0.10.5",
