--- a/package.json
+++ b/package.json
@@ -28,25 +28,26 @@
         "@types/express": "^4.16.0",
         "@types/express-handlebars": "0.0.30",
         "@types/hbs": "^4.0.0",
-        "@types/mongoose": "^5.2.6",
+        "@types/mongoose": "^5.2.17",
         "@types/pug": "^2.0.4",
-        "@types/react": "^16.4.11",
+        "@types/react": "^16.4.14",
         "cors": "^2.8.4",
         "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "express-react-views": "^0.10.5",
         "hbs": "^4.0.1",
-        "mongoose": "^5.2.9",
+        "mongoose": "^5.2.17",
         "pug": "^2.0.3",
-        "react": "^16.4.2",
-        "react-dom": "^16.4.2",
-        "typescript": "^3.0.1"
+        "react": "^16.5.2",
+        "react-dom": "^16.5.2",
+        "typescript": "^3.0.3"
     },
     "devDependencies": {
-        "@types/chai": "^4.1.4",
+        "@types/chai": "^4.1.5",
         "@types/mocha": "^5.2.5",
         "chai": "^4.1.2",
+        "express-openapi": "^2.0.7",
         "mocha": "^5.2.0",
-        "nodemon": "^1.18.3"
+        "nodemon": "^1.18.4"
     }
 }
